--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ a
                 <li>Java Developer</li>
             </ul>
             <div class="social-media-banner">
-                <a href=""><i class="fa fa-envelope"></i></a>
+                <a href="mailto:contact@ekatherine.net"><i class="fa fa-envelope"></i></a>
             </div>
           </div>
     </body>
