--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a
     margin-top: -154px;
     width:100%;
     height:150px;
-    background-image: url("https://snap-photos.s3.amazonaws.com/img-thumbs/960w/RQ2Z75PQIN.jpg");
+    background-image: url("./landscape.jpg");
     background-size: cover;
     border-bottom: solid 1px lightgrey;
   
